--- a/afat/locale/cs_CZ/LC_MESSAGES/django.po
+++ b/afat/locale/cs_CZ/LC_MESSAGES/django.po
@@ -1,23 +1,23 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# Peter Pfeufer <info@ppfeufer.de>, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-30 11:02+0200\n"
-"PO-Revision-Date: 2024-05-10 14:14+0000\n"
-"Last-Translator: Anonymous <noreply@weblate.org>\n"
-"Language-Team: Dutch <https://weblate.ppfeufer.de/projects/alliance-auth-"
-"apps/allianceauth-afat/nl/>\n"
-"Language: nl\n"
+"POT-Creation-Date: 2024-09-15 18:31+0200\n"
+"PO-Revision-Date: 2024-08-06 11:28+0000\n"
+"Last-Translator: Peter Pfeufer <info@ppfeufer.de>\n"
+"Language-Team: Czech <https://weblate.ppfeufer.de/projects/alliance-auth-"
+"apps/allianceauth-afat/cs/>\n"
+"Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.5.3\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n "
+"<= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
+"X-Generator: Weblate 5.6.2\n"
 
 #: afat/__init__.py:9 afat/app_settings.py:36
 msgid "Fleet Activity Tracking"
@@ -33,7 +33,7 @@ msgstr ""
 
 #: afat/admin.py:169
 msgid "Is enabled"
-msgstr ""
+msgstr "Aktivní"
 
 #: afat/admin.py:184
 msgid "Activate selected fleet types"
@@ -45,6 +45,8 @@ msgid "Failed to activate {failed} fleet type"
 msgid_plural "Failed to activate {failed} fleet types"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/admin.py:223
 #, python-brace-format
@@ -52,6 +54,8 @@ msgid "Activated {notifications_count} fleet type"
 msgid_plural "Activated {notifications_count} fleet types"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/admin.py:229
 msgid "Deactivate selected fleet types"
@@ -63,6 +67,8 @@ msgid "Failed to deactivate {failed} fleet type"
 msgid_plural "Failed to deactivate {failed} fleet types"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/admin.py:268
 #, python-brace-format
@@ -70,6 +76,8 @@ msgid "Deactivated {notifications_count} fleet type"
 msgid_plural "Deactivated {notifications_count} fleet types"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/apps.py:20
 #, python-brace-format
@@ -79,7 +87,7 @@ msgstr ""
 #: afat/forms.py:25
 #: afat/templates/afat/partials/fatlinks/details/tabs/manualfat.html:4
 msgid "This field is mandatory"
-msgstr ""
+msgstr "Toto pole je povinné"
 
 #: afat/forms.py:43 afat/forms.py:85 afat/forms.py:112
 #: afat/templates/afat/partials/dashboard/tabs/fatlinks.html:12
@@ -161,7 +169,7 @@ msgstr ""
 
 #: afat/helper/views.py:122 afat/helper/views.py:188
 msgid "Delete"
-msgstr ""
+msgstr "Smazat"
 
 #: afat/helper/views.py:124
 #, python-brace-format
@@ -651,6 +659,8 @@ msgid_plural ""
 "            "
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/templates/afat/partials/fatlinks/open-esi-fleets.html:25
 msgid "ESI fleet ID"
@@ -667,6 +677,8 @@ msgid_plural ""
 "            "
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/templates/afat/partials/fatlinks/open-esi-fleets.html:54
 msgid ""
@@ -689,10 +701,12 @@ msgid ""
 "Do you want to help translate this app into your language or improve the "
 "existing translation?"
 msgstr ""
+"Chceš pomoc s překladem této aplikace do tvého jazyka, nebo vylepšit "
+"současný překlad?"
 
 #: afat/templates/afat/partials/footer/app-translation-footer.html:8
 msgid "Join our team of translators!"
-msgstr ""
+msgstr "Připoj se k našemu týmu překladatelů!"
 
 #: afat/templates/afat/partials/form/required-field-hint.html:4
 msgid "Fields marked with an asterisk (*) are mandatory"
@@ -893,7 +907,7 @@ msgstr ""
 
 #: afat/templates/afat/view/logs/logs-overview.html:23
 msgid "User"
-msgstr ""
+msgstr "Uživatel"
 
 #: afat/templates/afat/view/logs/logs-overview.html:25
 msgid "Description"
@@ -913,6 +927,8 @@ msgid_plural ""
 "        "
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
+msgstr[3] ""
 
 #: afat/templates/afat/view/statistics/statistics-alliance-year-overview.html:7
 #: afat/templates/afat/view/statistics/statistics-alliance.html:7
