--- a/afat/locale/django.pot
+++ b/afat/locale/django.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Alliance Auth Fleet Activity Tracker (AFAT) 3.7.0\n"
 "Report-Msgid-Bugs-To: https://github.com/ppfeufer/allianceauth-afat/issues\n"
-"POT-Creation-Date: 2025-03-23 19:18+0100\n"
+"POT-Creation-Date: 2025-03-24 15:00+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -558,7 +558,7 @@ msgstr ""
 #: afat/templates/afat/partials/dashboard/tabs/fats.html:42
 #: afat/templates/afat/partials/statistics/character/tabs/raw_data.html:15
 #: afat/templates/afat/view/fatlinks/fatlinks-overview.html:31
-msgid "Eve time"
+msgid "EVE time"
 msgstr ""
 
 #: afat/templates/afat/partials/dashboard/tabs/fatlinks.html:19
@@ -639,15 +639,15 @@ msgid "Add ESI link"
 msgstr ""
 
 #: afat/templates/afat/partials/fatlinks/details/fatlink-info.html:11
-msgid "Link created (Eve Time)"
+msgid "Link created (EVE Time)"
 msgstr ""
 
 #: afat/templates/afat/partials/fatlinks/details/fatlink-info.html:17
-msgid "Link expires (Eve Time)"
+msgid "Link expires (EVE Time)"
 msgstr ""
 
 #: afat/templates/afat/partials/fatlinks/details/fatlink-info.html:19
-msgid "Link expired (Eve Time)"
+msgid "Link expired (EVE Time)"
 msgstr ""
 
 #: afat/templates/afat/partials/fatlinks/details/fatlink-info.html:29
