--- a/afat/locale/django.pot
+++ b/afat/locale/django.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Alliance Auth Fleet Activity Tracker (AFAT) 3.8.0-beta.3\n"
+"Project-Id-Version: Alliance Auth Fleet Activity Tracker (AFAT) 3.8.0-beta.4\n"
 "Report-Msgid-Bugs-To: https://github.com/ppfeufer/allianceauth-afat/issues\n"
-"POT-Creation-Date: 2025-04-15 17:48+0200\n"
+"POT-Creation-Date: 2025-04-15 23:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1363,7 +1363,13 @@ msgid ""
 "character.</p>"
 msgstr ""
 
-#: afat/views/statistics.py:428
+#: afat/views/statistics.py:379
+msgid ""
+"This character is in a different corporation and their FATs are not counted "
+"towards the statistics of the main corporation."
+msgstr ""
+
+#: afat/views/statistics.py:457
 msgid ""
 "<h4>Warning!</h4><p>You do not have permission to view statistics for that "
 "corporation.</p>"
